Trying to fix container overflow adding float to div

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -44,6 +44,10 @@ div.game-section {
 	z-index: 0;
 }
 
+div#digresults > div {
+	float: left;
+}
+
 div#digresults > h1 {
 	text-align: center;
 	border: solid 2px;
